--- a/src/app/admin/registro-examen/registro-examen.component.html
+++ b/src/app/admin/registro-examen/registro-examen.component.html
@@ -4,12 +4,12 @@
   <div *ngIf="!evaluacion.id" class="p-fluid">
     <div class="field">
       <label for="titulo">Título de la Evaluación</label>
-      <input type="text" pInputText id="titulo" [(ngModel)]="evaluacion.titulo" required placeholder="Ingrese el título" />
+      <input type="text" pInputText id="titulo" [(ngModel)]="evaluacion.titulo" required placeholder="Ingrese el título" autocomplete="off"/>
     </div>
 
     <div class="field">
       <label for="descripcion">Descripción de la Evaluación</label>
-      <textarea rows="5" pInputTextarea id="descripcion" [(ngModel)]="evaluacion.descripcion" required placeholder="Ingrese la descripción"></textarea>
+      <textarea rows="5" pInputTextarea id="descripcion" [(ngModel)]="evaluacion.descripcion" required placeholder="Ingrese la descripción" autocomplete="off"></textarea>
     </div>
 
     <div class="field">
@@ -29,12 +29,12 @@
     <ng-container *ngFor="let pregunta of evaluacion.preguntas; let i = index">
       <div *ngIf="preguntaActualIndex === i" class="field">
         <label for="enunciado-{{ i }}">Enunciado de la Pregunta {{ i + 1 }}</label>
-        <input class="mb-3" type="text" pInputText id="enunciado-{{ i }}" [(ngModel)]="pregunta.enunciado" required placeholder="Ingrese el enunciado" />
+        <input class="mb-3" type="text" pInputText id="enunciado-{{ i }}" [(ngModel)]="pregunta.enunciado" required placeholder="Ingrese el enunciado" autocomplete="off" />
         <div *ngFor="let opcion of pregunta.opciones; let j = index" class="option-container">
           <label [attr.for]="'opcion-' + pregunta.id + '-' + j" class="option-title">Opción {{ j + 1 }}</label>
           <div class="option-inputs">
             <input type="radio" [attr.name]="'opcion-' + pregunta.id" [value]="opcion.esCorrecta" (click)="seleccionarOpcion(pregunta, opcion)" class="option-radio">
-            <input type="text" pInputText [attr.id]="'opcion-' + pregunta.id + '-' + j" [(ngModel)]="opcion.texto" required placeholder="Ingrese el texto de la opción" class="option-text" />
+            <input type="text" pInputText [attr.id]="'opcion-' + pregunta.id + '-' + j" [(ngModel)]="opcion.texto" required placeholder="Ingrese el texto de la opción" class="option-text" autocomplete="off"  />
           </div>
         </div>
         <button *ngIf="pregunta.opciones.length < maxOpciones" pButton type="button" label="Agregar Opciones" (click)="agregarOpciones(pregunta)"></button>
