--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -22,7 +22,7 @@
   </ng-template>
   <ng-template pTemplate="body" let-trabajador>
     <tr>
-      <td>{{ trabajador.Nombre }} {{ trabajador.Apellidos }}</td>
+      <td>{{ trabajador.name }} {{ trabajador.lastName }}</td>
       <td class="text-center">
         <button pButton icon="pi pi-eye" class="p-button-rounded p-button-success mr-2" (click)="visualizar(trabajador)"></button>
         <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-primary mr-2" (click)="editar(trabajador)"></button>
@@ -36,9 +36,9 @@
 <p-dialog header="Detalle del Trabajador" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}">
   <ng-container *ngIf="trabajadorSeleccionado">
     <div class="flex align-items-center">
-      <img [src]="trabajadorSeleccionado.Foto" alt="Imagen de perfil" class="mr-2 trabajador-imagen" style="width: 100px; height: 100px; border-radius: 50%;">
+      <img [src]="trabajadorSeleccionado.photo" alt="Imagen de perfil" class="mr-2 trabajador-imagen" style="width: 100px; height: 100px; border-radius: 50%;">
       <div>
-        <h4>{{ trabajadorSeleccionado.Nombre }} {{ trabajadorSeleccionado.Apellidos }}</h4>
+        <h4>{{ trabajadorSeleccionado.name }} {{ trabajadorSeleccionado.lastName }}</h4>
       </div>
     </div>
     <div *ngIf="resultadosEvaluacion.length > 0; else noEvaluaciones">
