--- a/src/app/admin/home/home.component.css
+++ b/src/app/admin/home/home.component.css
@@ -1,48 +1,7 @@
-.p-menubar {
-  border: 1px solid green;
-  border-radius: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
-}
-
 .p-menubar .p-menuitem-link {
-  color: #333;
   transition: color 0.2s ease, background-color 0.2s ease, text-decoration 0.2s ease;
   padding: 10px 20px;
   font-size: 16px;
-}
-
-.p-menubar .p-menuitem-link:hover {
-  background-color: #e9ecef;
-  color: #0056b3;
-}
-
-.p-menubar .p-menuitem-link:active {
-  background-color: #ddeeff;
-  color: #004488;
-}
-
-.p-menubar .p-menuitem-link:hover,
-.p-menubar .p-menuitem-link.p-highlight {
-  color: #0056b3;
-  text-decoration: underline;
-  background-color: #e9ecef;
-}
-
-.p-menubar .p-menuitem-link:active {
-  background-color: #ddeeff;
-  color: #004488;
-}
-.p-menubar .p-submenu-list > .p-menuitem > .p-menuitem-link {
-  color: #333;
-}
-
-.p-menubar .p-submenu-list > .p-menuitem > .p-menuitem-link:hover {
-  background-color: #e9ecef;
-  color: #0056b3;
-}
-.p-menubar .p-menuitem .pi {
-  margin-right: .5em;
 }
 @media (max-width: 768px) {
   .p-menubar .p-menuitem-link {
@@ -69,5 +28,16 @@
 
 .p-button-logout:active {
   background-color: #a71d2a;
+}
+
+.p-menubar {
+  border: 1px solid green;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
+  font-weight: bold;
+  color: #CB3234;
 }
 
