--- a/src/app/admin/home/home.component.html
+++ b/src/app/admin/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="surface-ground px-4 py-2 shadow-2 border-round">
-  <p-menubar [model]="items">
+  <p-menubar #menu [model]="items" styleClass="menucus">
     <ng-template pTemplate="end">
       <button class="p-button p-button-outlined p-button-logout" (click)="logout()">
         <i class="pi pi-sign-out mr-1"></i> Logout
