--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -33,7 +33,7 @@
 </p-table>
 </div>
 
-<p-dialog header="Detalle del Trabajador" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}">
+<p-dialog header="Detalle del Trabajador" [(visible)]="displayViewDialog" [modal]="true" [style]="{width: '50vw'}">
   <ng-container *ngIf="trabajadorSeleccionado">
     <div class="flex align-items-center">
       <img [src]="trabajadorSeleccionado.photo" alt="Imagen de perfil" class="mr-2 trabajador-imagen" style="width: 100px; height: 100px; border-radius: 50%;">
@@ -62,4 +62,38 @@
     </ng-template>
   </ng-container>
 </p-dialog>
+
+<p-dialog header="Editar Trabajador" [(visible)]="displayEditDialog" [modal]="true" [style]="{width: '50vw'}">
+  <form #trabajadorForm="ngForm" (ngSubmit)="confirmarEdicion(trabajadorForm.value)">
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="usuario">Usuario</label>
+        <input type="text" pInputText id="usuario" [(ngModel)]="trabajadorSeleccionado.user" name="user" required>
+        <i class="pi pi-user field-icon"></i>
+      </div>
+
+      <div class="p-field">
+        <label for="password">Contraseña</label>
+        <input  pInputText id="password" [(ngModel)]="trabajadorSeleccionado.password" name="password" required>
+        <i class="pi pi-lock field-icon"></i>
+      </div>
+
+
+      <div class="p-field photo-container">
+        <label for="photo">Foto</label>
+        <p-fileUpload name="photo" id="photo" url="URL_PARA_SUBIR_FOTOS" accept="image/*" maxFileSize="1000000"
+                      (onUpload)="onUpload($event)" (onBeforeUpload)="onBeforeUpload($event)"
+                      customUpload="true" chooseLabel="Elegir" uploadLabel="Subir" cancelLabel="Cancelar">
+        </p-fileUpload>
+        <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo" alt="Foto del trabajador" class="photo-preview">
+      </div>
+
+      <div class="p-field">
+        <button type="submit" pButton label="Guardar Cambios" [disabled]="!trabajadorForm.valid"></button>
+      </div>
+    </div>
+  </form>
+</p-dialog>
+
+
 <p-toast></p-toast>
