--- a/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
+++ b/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
@@ -1,5 +1,5 @@
 <div class="p-fluid form-container mt-5">
-<h2>Registrar Nuevo Trabajador</h2>
+  <h2>Registrar Nuevo Trabajador</h2>
   <form #trabajadorForm="ngForm" (ngSubmit)="registrarTrabajador()" class="trabajador-form">
     <div class="field">
       <label for="nombre">Nombre</label>
@@ -7,7 +7,8 @@
     </div>
     <div class="field">
       <label for="apellidos">Apellidos</label>
-      <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos" required autocomplete="off">
+      <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos" required
+             autocomplete="off">
     </div>
     <div class="field">
       <label for="foto">Foto</label>
@@ -17,11 +18,13 @@
 
     <div class="field">
       <label for="usuario">Usuario</label>
-      <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario" required autocomplete="off">
+      <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario" required
+             autocomplete="off">
     </div>
     <div class="field">
       <label for="contrasena">Contraseña</label>
-      <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena" required autocomplete="off">
+      <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena" required
+             autocomplete="off">
     </div>
     <button type="submit" pButton label="Registrar" [disabled]="!trabajadorForm.form.valid"></button>
   </form>
