--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -13,30 +13,35 @@
   </div>
 </div>
 <div class="table-container">
-  <p-table [value]="trabajadoresFiltrados" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]" responsiveLayout="scroll">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Nombre</th>
-      <th>Acciones</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-trabajador>
-    <tr>
-      <td>{{ trabajador.name }} {{ trabajador.lastName }}</td>
-      <td class="text-center">
-        <button pButton icon="pi pi-eye" class="p-button-rounded p-button-success mr-2" (click)="visualizar(trabajador)"></button>
-        <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-primary mr-2" (click)="editar(trabajador)"></button>
-        <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="eliminar(trabajador)"></button>
-      </td>
-    </tr>
-  </ng-template>
-</p-table>
+  <p-table [value]="trabajadoresFiltrados" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]"
+           responsiveLayout="scroll">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Nombre</th>
+        <th>Acciones</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-trabajador>
+      <tr>
+        <td>{{ trabajador.name }} {{ trabajador.lastName }}</td>
+        <td class="text-center">
+          <button pButton icon="pi pi-eye" class="p-button-rounded p-button-success mr-2"
+                  (click)="visualizar(trabajador)"></button>
+          <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-primary mr-2"
+                  (click)="editar(trabajador)"></button>
+          <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger"
+                  (click)="eliminar(trabajador)"></button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
 
 <p-dialog header="Detalle del Trabajador" [(visible)]="displayViewDialog" [modal]="true" [style]="{width: '50vw'}">
   <ng-container *ngIf="trabajadorSeleccionado">
     <div class="flex align-items-center">
-      <img [src]="trabajadorSeleccionado.photo" alt="Imagen de perfil" class="mr-2 trabajador-imagen" style="width: 100px; height: 100px; border-radius: 50%;">
+      <img [src]="trabajadorSeleccionado.photo" alt="Imagen de perfil" class="mr-2 trabajador-imagen"
+           style="width: 100px; height: 100px; border-radius: 50%;">
       <div>
         <h4>{{ trabajadorSeleccionado.name }} {{ trabajadorSeleccionado.lastName }}</h4>
       </div>
@@ -74,7 +79,7 @@
 
       <div class="p-field">
         <label for="password">Contraseña</label>
-        <input  pInputText id="password" [(ngModel)]="trabajadorSeleccionado.password" name="password" required>
+        <input pInputText id="password" [(ngModel)]="trabajadorSeleccionado.password" name="password" required>
         <i class="pi pi-lock field-icon"></i>
       </div>
 
@@ -85,7 +90,8 @@
                       (onUpload)="onUpload($event)" (onBeforeUpload)="onBeforeUpload($event)"
                       customUpload="true" chooseLabel="Elegir" uploadLabel="Subir" cancelLabel="Cancelar">
         </p-fileUpload>
-        <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo" alt="Foto del trabajador" class="photo-preview">
+        <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo" alt="Foto del trabajador"
+             class="photo-preview">
       </div>
 
       <div class="p-field">
