--- a/src/app/worker/examenes/examenes.component.html
+++ b/src/app/worker/examenes/examenes.component.html
@@ -2,7 +2,8 @@
   <div class="text-center mb-4">
     <h1>Exámenes Disponibles</h1>
   </div>
-  <p-table [value]="evaluaciones" [rows]="10" [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]" responsiveLayout="scroll">
+  <p-table [value]="evaluaciones" [rows]="10" [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]"
+           responsiveLayout="scroll">
     <ng-template pTemplate="header">
       <tr>
         <th>Título</th>
@@ -15,9 +16,11 @@
       <tr>
         <td>{{ evaluacion.titulo }}</td>
         <td>{{ evaluacion.descripcion }}</td>
-        <td>{{obtenerCalificacion(evaluacion.id) != null ? obtenerCalificacion(evaluacion.id) : '-' }}</td>
+        <td>{{ obtenerCalificacion(evaluacion.id) != null ? obtenerCalificacion(evaluacion.id) : '-' }}</td>
         <td>
-          <button type="button" pButton icon="pi pi-pencil" *ngIf="!tieneCalificacion(evaluacion.id)" (click)="rendirEvaluacion(evaluacion.id)" class="p-button-rounded p-button-success" label="Rendir"></button>
+          <button type="button" pButton icon="pi pi-pencil" *ngIf="!tieneCalificacion(evaluacion.id)"
+                  (click)="rendirEvaluacion(evaluacion.id)" class="p-button-rounded p-button-success"
+                  label="Rendir"></button>
         </td>
       </tr>
     </ng-template>
