--- a/src/app/admin/registro-examen/registro-examen.component.html
+++ b/src/app/admin/registro-examen/registro-examen.component.html
@@ -4,8 +4,9 @@
   <div *ngIf="!evaluacion.id" class="p-fluid">
     <div class="field">
       <label for="titulo">Título de la Evaluación</label>
-      <input type="text" id="titulo" [(ngModel)]="evaluacion.titulo" (ngModelChange)="onTitleChange($event)"/>
+      <input type="text" id="titulo" [(ngModel)]="evaluacion.titulo" autocomplete="off"/>
     </div>
+    <small *ngIf="!tituloEsUnico" class="error-message">El título de la evaluación ya existe.</small>
 
     <div class="field">
       <label for="descripcion">Descripción de la Evaluación</label>
