--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -39,7 +39,7 @@
 
 <p-dialog header="Detalle del Trabajador" [(visible)]="displayViewDialog" [modal]="true" [style]="{width: '50vw'}">
   <ng-container *ngIf="trabajadorSeleccionado">
-    <div class="flex align-items-center">
+    <div class="flex align-items-center mb-5">
       <img [src]="trabajadorSeleccionado.photo" alt="Imagen de perfil" class="mr-2 trabajador-imagen"
            style="width: 100px; height: 100px; border-radius: 50%;">
       <div>
@@ -86,12 +86,11 @@
 
       <div class="p-field photo-container">
         <label for="photo">Foto</label>
-        <p-fileUpload name="photo" id="photo" url="URL_PARA_SUBIR_FOTOS" accept="image/*" maxFileSize="1000000"
-                      (onUpload)="onUpload($event)" (onBeforeUpload)="onBeforeUpload($event)"
-                      customUpload="true" chooseLabel="Elegir" uploadLabel="Subir" cancelLabel="Cancelar">
+        <p-fileUpload #fileUpload name="photo" id="photo" accept="image/*" maxFileSize="1000000"
+                       (onBeforeUpload)="onBeforeUpload($event)"
+                      customUpload="true" (uploadHandler)="onUpload($event)" chooseLabel="Elegir" cancelLabel="Cancelar">
         </p-fileUpload>
-        <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo" alt="Foto del trabajador"
-             class="photo-preview">
+        <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo | safe: 'url'" alt="Foto del trabajador" class="photo-preview">
       </div>
 
       <div class="p-field">
