--- a/src/app/worker/vista-examen/vista-examen.component.css
+++ b/src/app/worker/vista-examen/vista-examen.component.css
@@ -13,7 +13,7 @@
   transition: opacity 0.3s ease, transform 0.3s ease;
   position: relative;
   border: none;
-  margin-left: auto; /* Esto empujará el card a la derecha */
+  margin-left: auto;
 }
 
 .card.enter {
@@ -86,52 +86,46 @@ h3 {
   width: 100%;
 }
 
-/* Contenedor para el contenido principal */
 .main-content {
   display: flex;
-  justify-content: flex-start; /* Alinea al principio, pero con espacio a la izquierda */
-  align-items: center; /* Centra verticalmente el contenido */
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   gap: 20px;
   width: 100%;
-  padding-left: 20px; /* Añade algo de espacio en la izquierda */
-}
-.main-content video,
-.main-content canvas {
-  width: 320px;
-  height: 240px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
+  padding-left: 20px;
+  position: relative;
+  height: 480px;
 }
 
-/* Ajuste para que el spinner y el texto de carga estén centrados verticalmente */
+
 .loading-indicator {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.main-content canvas {
-  display: none; /* Esconde el canvas por defecto */
+
+.main-content video, .main-content canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  display: none;
+}
+.main-content video.loaded, .main-content canvas {
+  display: block;
 }
 
-.main-content canvas.active {
-  display: block; /* Muestra el canvas cuando está activo */
-}
-video {
-  width: 320px; /* Tamaño de la cámara */
-  height: auto; /* Altura auto para mantener la relación de aspecto */
-  border-radius: 10px; /* Bordes redondeados */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para profundidad */
-  z-index: 2; /* Asegúrate de que la cámara está por encima del fondo */
-  opacity: 0; /* Inicia con opacidad 0 */
-}
-video.loaded {
-  opacity: 1; /* Cambia a opacidad 1 cuando se haya cargado */
-}
-video:hover {
+.main-content video:hover {
   transform: scale(1.05);
+}
+
+.main-content canvas {
+  background-color: transparent;
+  z-index: 3;
 }
 
 .form-container {
@@ -143,7 +137,7 @@ video:hover {
     flex-direction: column-reverse;
   }
 
-  video, .card {
+  .main-content video, .card {
     width: 90%;
   }
 }
