--- a/src/app/admin/home/home.component.css
+++ b/src/app/admin/home/home.component.css
@@ -4,11 +4,11 @@
   font-size: 16px;
 }
 @media (max-width: 768px) {
-  .p-menubar .p-menuitem-link {
+  p-menubar p-menuitem-link {
     font-size: 14px;
     padding: 8px 15px;
   }
-  .p-button-logout {
+  p-button-logout {
     padding: 8px 15px;
   }
 }
