--- a/src/app/worker/examenes/examenes.component.css
+++ b/src/app/worker/examenes/examenes.component.css
@@ -1,35 +1,17 @@
-.container {
-  padding: 2rem;
-  margin: auto;
+
+* {
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #333;
+}
 h1 {
   font-size: 2rem;
   color: var(--primary-color);
   margin-bottom: 1rem;
-}
-
-.p-datatable .p-datatable-thead > tr > th {
-  text-align: left;
-  background-color: #007bff;
-  color: white;
-  border: none;
-}
-
-.p-datatable .p-datatable-tbody > tr > td {
-  border-bottom: 1px solid #dee2e6;
-  padding: 1rem;
-  vertical-align: middle;
-  background-color: white;
-  transition: background-color 0.3s;
-}
-
-.p-datatable .p-datatable-tbody > tr:hover > td {
-  background-color: #f8f9fa;
-}
-
-.p-button {
-  margin-right: .5rem;
 }
 
 @keyframes slideIn {
@@ -43,22 +25,52 @@ h1 {
   }
 }
 
-.p-datatable {
-  animation: slideIn 0.5s ease-out;
-}
-
 @media screen and (max-width: 960px) {
   .container {
     padding: 1rem;
   }
 }
+
+p-table {
+  border-collapse: collapse;
+  animation: slideIn 0.5s ease-out;
+}
+
 p-table th {
   background-color: #007bff;
   color: white;
   text-align: center;
+  font-size: 16px;
+  width: 25%;
+}
+
+p-table tr {
+  transition: background-color 0.3s ease;
 }
 
 p-table td {
   text-align: center;
   vertical-align: middle;
+  background-color: #ffffff;
+}
+
+p-table td,
+p-table th {
+  padding: 15px 20px;
+  vertical-align: middle;
+  border: 1px #ddd;
+  border-bottom: 1px dotted #ddd;
+
+}
+
+.table-container {
+  max-width: 90%;
+  margin: auto;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+.red-cell {
+  color: red;
+  font-size: 1.1rem;
 }
