--- a/src/app/worker/examenes/examenes.component.html
+++ b/src/app/worker/examenes/examenes.component.html
@@ -1,7 +1,7 @@
-<div class="container">
-  <div class="text-center mb-4">
-    <h1>Exámenes Disponibles</h1>
-  </div>
+<div class="text-center mb-5 mt-6 ">
+  <h1>Exámenes Disponibles</h1>
+</div>
+<div class="table-container">
   <p-table [value]="evaluaciones" [rows]="10" [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]"
            responsiveLayout="scroll">
     <ng-template pTemplate="header">
@@ -14,9 +14,11 @@
     </ng-template>
     <ng-template pTemplate="body" let-evaluacion>
       <tr>
-        <td>{{ evaluacion.titulo }}</td>
-        <td>{{ evaluacion.descripcion }}</td>
-        <td>{{ obtenerCalificacion(evaluacion.id) != null ? obtenerCalificacion(evaluacion.id) : '-' }}</td>
+        <td>{{ evaluacion.titulo | upperCamelCase }}</td>
+        <td>{{ evaluacion.descripcion}}</td>
+        <td [ngClass]="{'red-cell': (obtenerCalificacion(evaluacion.id)) < 11}">
+          {{ obtenerCalificacion(evaluacion.id) != null ? (obtenerCalificacion(evaluacion.id)) : '-' }}
+        </td>
         <td>
           <button type="button" pButton icon="pi pi-pencil" *ngIf="!tieneCalificacion(evaluacion.id)"
                   (click)="rendirEvaluacion(evaluacion.id)" class="p-button-rounded p-button-success"
@@ -26,3 +28,4 @@
     </ng-template>
   </p-table>
 </div>
+
