--- a/src/app/worker/vista-examen/vista-examen.component.css
+++ b/src/app/worker/vista-examen/vista-examen.component.css
@@ -46,20 +46,20 @@ h3 {
   margin-bottom: 2rem;
 }
 
-.p-button {
+p-button {
   font-size: 1rem;
   padding: 0.5rem 1rem;
   margin: 0.5rem;
   border-radius: 20px;
 }
 
-.p-button-success {
+p-button-success {
   background-color: #28a745;
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.p-button-success:hover {
+p-button-success:hover {
   background-color: #218838;
 }
 
